// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Snapshot renders when signed in 1`] = `
<Fragment>
  <WithStyles(ForwardRef(AppBar))
    className="makeStyles-headerMobile-3"
    position="fixed"
  >
    <WithStyles(ForwardRef(Tabs))
      centered={true}
      style={
        Object {
          "backgroundColor": "#490050",
        }
      }
    >
      <WithStyles(ForwardRef(Tab))
        className="makeStyles-tabs-4"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "Link",
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          }
        }
        label={
          <img
            alt="logo"
            className="makeStyles-logo-8"
            src="logo4.png"
            textcolor="inherit"
          />
        }
        to="/"
      />
      <WithStyles(ForwardRef(Tab))
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "Link",
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          }
        }
        label={
          <UNDEFINED
            style={
              Object {
                "paddingBottom": "4px",
                "verticalAlign": "middle",
              }
            }
          />
        }
        to="/Profile"
      />
      <WithStyles(ForwardRef(Tab))
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "Link",
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          }
        }
        label={
          <UNDEFINED
            style={
              Object {
                "paddingBottom": "4px",
                "verticalAlign": "middle",
              }
            }
          />
        }
        to="/MyLeagues"
      />
      <WithStyles(ForwardRef(Tab))
        label={
          <UNDEFINED
            style={
              Object {
                "paddingBottom": "4px",
                "verticalAlign": "middle",
              }
            }
          />
        }
        onClick={[Function]}
      />
    </WithStyles(ForwardRef(Tabs))>
  </WithStyles(ForwardRef(AppBar))>
</Fragment>
`;

exports[`Navbar Snapshot renders when signed out 1`] = `
<Fragment>
  <WithStyles(ForwardRef(AppBar))
    className="makeStyles-header-2"
    position="static"
  >
    <WithStyles(ForwardRef(Tabs))>
      <WithStyles(ForwardRef(Tab))
        className="makeStyles-tabs-4"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "Link",
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          }
        }
        label={
          <div>
            <img
              alt="logo"
              className="makeStyles-logo-8"
              src="logo4.png"
              textcolor="inherit"
            />
          </div>
        }
        to="/"
      />
      <WithStyles(ForwardRef(Tab))
        className="makeStyles-signInTab-5"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "Link",
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          }
        }
        label={
          <div>
            <UNDEFINED
              style={
                Object {
                  "paddingBottom": "4px",
                  "verticalAlign": "middle",
                }
              }
            />
             Sign In 
          </div>
        }
        to="/SignIn"
      />
      <WithStyles(ForwardRef(Tab))
        className="makeStyles-signUpTab-6"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "Link",
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          }
        }
        label={
          <div>
            <UNDEFINED
              style={
                Object {
                  "paddingBottom": "4px",
                  "verticalAlign": "middle",
                }
              }
            />
             Sign Up 
          </div>
        }
        to="/SignUp"
      />
    </WithStyles(ForwardRef(Tabs))>
  </WithStyles(ForwardRef(AppBar))>
</Fragment>
`;
